--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.17.1",
     "bootstrap": "^3.3.7",
     "create-react-class": "^15.6.2",
+    "fetch-jsonp": "^1.1.3",
     "react": "^16.2.0",
     "react-bootstrap": "^0.31.5",
     "react-dom": "^16.2.0",
     "react-scripts": "1.0.17",
-    "reset-css": "^2.2.1"
+    "reset-css": "^2.2.1",
+    "valid-url": "^1.0.9"
   },
   "scripts": {
     "start": "react-scripts start",
