--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "axios": "^0.17.1",
     "bootstrap": "^3.3.7",
     "create-react-class": "^15.6.2",
-    "fetch-jsonp": "^1.1.3",
+    "google-map-react": "^0.26.0",
+    "jquery": "^3.2.1",
     "react": "^16.2.0",
     "react-bootstrap": "^0.31.5",
     "react-dom": "^16.2.0",
+    "react-google-maps": "^9.4.3",
     "react-scripts": "1.0.17",
     "reset-css": "^2.2.1",
     "valid-url": "^1.0.9"
