--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "@types/googlemaps": "^3.30.3",
     "rollup-plugin-commonjs": "^8.2.6",
     "rollup-plugin-replace": "^2.0.0",
     "rollup-plugin-uglify": "^2.0.1",
