--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "bootstrap": "^3.3.7",
     "create-react-class": "^15.6.2",
     "google-map-react": "^0.26.0",
+    "google-maps-react": "^1.1.2",
     "jquery": "^3.2.1",
+    "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-bootstrap": "^0.31.5",
     "react-dom": "^16.2.0",
